themes/Light/theme.css
/** Global **/
/* Global variables */
:root {
 --main-border-color: #666;
 --button-border: #333;
}
body {
 max-width: 75%;
 margin: auto;
 font-family: 'Helvetica', 'Arial', sans-serif;
 background: #f2f2f2;
}
a {
 color: blue;
 text-decoration: none;
}
a:hover {
 color: royalblue;
}
.header {
 border: 1px solid var(--main-border-color);
 padding: 20px;
 font-size: 160%;
 background: steelblue;
 color: white;
 text-align: center;
 margin-top: 6px;
}
.navbar {
 border-left: 1px solid var(--main-border-color);
 border-right: 1px solid var(--main-border-color);
 border-bottom: 1px solid var(--main-border-color);
 padding: 8px;
 background: lightslategrey;
 text-align: center;
}
.navbar a {
 margin-right: 5%;
 margin-left: 5%;
 font-weight: bold;
 font-size: 140%;
 margin-bottom: 5px;
 margin-top: 5px;
 display: inline-block;
 color: white;
}
.navbar a:hover {
 color: lightgray;
}
.content {
 border-left: 1px solid var(--main-border-color);
 border-right: 1px solid var(--main-border-color);
 padding: 20px;
 background: white;
}
.footer {
 border: 1px solid var(--main-border-color);
 padding: 20px;
 background: white;
 text-align: center;
 margin-bottom: 6px;
}
/* Messages */
.success {
 border: 1px solid green;
 padding: 4px;
 margin: 2px;
 background: #77ff77;
}
.info {
 border: 1px solid goldenrod;
 padding: 4px;
 margin: 2px;
 background: #ffff77;
}
.error {
 border: 1px solid red;
 padding: 4px;
 margin: 2px;
 background: #ff7777;
}
#toasts {
 position: fixed;
 top: 5px;
 left: 5px;
}
.toast {
 animation: seconds 5.0s forwards;
 animation-iteration-count: 1;
 animation-delay: 5s;
}
@keyframes seconds {
 0% {opacity: 1} 100% {opacity: 0; zindex: -10}
}
/* Forms/Buttons */
.form {
 margin-left: 32px;
}
.form label {
 min-width: 6em;
 display: inline-block;
 text-align: right;
}
.form input, textarea {
 box-sizing: border-box;
 width: 250px;
 /* For some reason Chromium-based browsers have a different default input height than FireFox. */
 min-height: 25px;
 outline: none;
 margin: 10px;
 font-family: inherit;
 max-width: 100%;
}
.form textarea {
 width: 500px;
}
.form input[type=checkbox] {
 width: auto;
}
.form input[type=submit] {
 /* Once again, Chrome-based and FireFox have different default heights. */
 height: 40px;
 
}
.button {
 width: fit-content!important;
 background: royalblue;
 color: white;
 border: 1px solid var(--button-border);
 font-size: 105%;
 padding: 6px;
 cursor: pointer;
}
.button:hover {
 color: lightgrey;
 background: cornflowerblue;
}

/** Pages **/
/* Install page */
.installForm label {
 min-width: 8em;
}
.installForm textarea {
 resize: vertical;
 height: 120px;
 vertical-align: baseline;
}
/* Register page */
.registerForm label {
 min-width: 8em;
}
/* New post page */
.newPostForm label {
 min-width: 4em;
 vertical-align: top;
 margin-top: 10px;
}
.newPostForm textarea {
 resize: vertical;
 height: 250px;
}
.configForm label {
 min-width: 4em;
 vertical-align: top;
 margin-top: 10px;
}
.configForm textarea {
 resize: vertical;
 height: 120px;
}
.configForm select {
 vertical-align: bottom;
}
/* Post tiles */
.postsTable {
 width: 100%;
}
.postTile {
 padding: 14px;
 height: 100%;
 text-align: center;
 vertical-align: top;
 overflow-wrap: break-word;
 border: 1px solid var(--main-border-color);
}
.postTile a {
 color: black;
 font-weight: bold;
}
.postTile a:hover {
 color: #444;
}
.postTile img {
 max-width: 100%;
 height: auto;
 max-height: 15vh;
 display: block;
 margin: auto;
 border: 1px solid var(--main-border-color);
}
.dummyTile {
 padding: 14px;
 width: 20%;
}
/* Post page */
.post {
 padding: 15px;
}
.postHeader {
 text-align: center;
 margin-bottom: 12px;
}
.postHeader img {
 max-width: 100%;
 max-height: 60vh;
 height: auto;
 display: block;
 margin-left: auto;
 margin-right: auto;
 border: 1px solid var(--main-border-color);
}
.postButtons {
 display: flex;
 flex-flow: row wrap;
 align-items: center;
 justify-content: center;
}
.postButton {
 margin: 2px 5px;
 min-width: 0;
}
/* Post content formatting */
code, .codeblock {
 border: 1px solid darkgrey;
 background: lightgrey;
 padding: 2px 2px;
 white-space: pre-wrap;
}
.postContent {
 line-height: 1.5;
 padding: 8px;
 overflow-wrap: break-word;
}
.postContent img {
 max-width: 100%;
 max-height: 60vh;
 border: 1px solid var(--main-border-color);
 display: block;
}
.postContent blockquote {
 border-left: 6px solid grey;
 margin-left: 0;
 padding-left: 20px;
}
/* Tags */
.tag {
 display: inline;
 margin: 3px;
 background: #99f;
 border: 1px solid var(--main-border-color);
 padding: 1px;
}
.tag:hover {
 background: #ccf;
}
.tagslabel {
 display: inline;
 margin-right: 4px;
}
/* Home page/All posts page */
.posts {
 border: 1px solid var(--main-border-color);
}
.posts legend {
 font-size: 120%;
}
/* Edit post page */
.editPostForm label {
 min-width: 4em;
 vertical-align: top;
 margin-top: 12px;
}
.editPostForm textarea {
 resize: vertical;
 height: 250px;
}
/* Manage uploads page */
.uploadTile {
 display: inline-block;
 border: 1px solid var(--main-border-color);
 padding: 8px;
 margin: 4px;
 max-width: 200px;
}
.manageUploads img {
 max-width: 100%;
 border: 1px solid var(--main-border-color);
}
/* Panel */
.panelcontent {
 text-align: center;
}
/* Userlist (manage users page) */
.userlist td {
 font-weight: normal;
 border: 1px solid grey;
 padding: 8px;
}
.userlist thead th {
 background: cornflowerblue;
 border: 1px solid royalblue;
 color: white;
 padding: 8px;
}

/** Phone/Tablet **/
@media only screen and (max-width: 768px) {
 body {
  max-width: 100%;
 }
 .header {
  border-left: 0;
  border-right: 0;
  margin-top: 0;
  border-top: 0;
 }
 .navbar {
  border-left: 0;
  border-right: 0;
 }
 .content {
  border-left: 0;
  border-right: 0;
 }
 .footer {
  border-left: 0;
  border-right: 0;
  border-bottom: 0;
  margin-bottom: 0;
 }
 /* Userlist becomes vertical on mobile. */
 .userlist thead {
  display:none
 }
 .userlist td {
  display: block;
  margin: 6px;
  text-align: left;
  position: relative;
  min-width: 100%;
  padding-left: 100%;
 }
 .userlist td::before {
  content:attr(data-label);
  position: absolute;
  padding-right: 80px;
  text-align: left;
  left: 0;
  padding-left: 2px;
  font-weight: bold;
 }
}

